--- a/app/src/main/res/layout/item_loan_collection.xml
+++ b/app/src/main/res/layout/item_loan_collection.xml
@@ -65,6 +65,33 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
+        <TextView
+            android:id="@+id/labelMobileNumber"
+            style="@style/common_text_style"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/mobile_no_"
+            android:textStyle="normal"
+            android:layout_marginTop="@dimen/_2sdp"
+            app:layout_constraintStart_toStartOf="@+id/clStatus"
+            app:layout_constraintTop_toBottomOf="@id/clStatus" />
+
+        <TextView
+            android:id="@+id/txtMobileNumber"
+            android:ellipsize="end"
+            android:maxLength="12"
+            style="@style/common_text_style"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_2sdp"
+            android:layout_marginEnd="@dimen/_20sdp"
+            android:textStyle="normal"
+            app:layout_constraintStart_toEndOf="@+id/labelMobileNumber"
+            app:layout_constraintTop_toBottomOf="@id/clStatus"
+            tools:text="987654321" />
+
+
+
 
         <TextView
             android:id="@+id/txtLocation"
@@ -140,6 +167,31 @@
             app:layout_constraintBottom_toBottomOf="@id/labelAttemptNumber"
             tools:src="@drawable/hand" />
 
+        <TextView
+            android:id="@+id/labelPinCode"
+            style="@style/common_text_style"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_2sdp"
+            android:text="@string/pincode"
+            android:textStyle="normal"
+            app:layout_constraintStart_toStartOf="@id/labelAttemptNumber"
+            app:layout_constraintTop_toBottomOf="@id/labelAttemptNumber" />
+
+        <TextView
+            android:id="@+id/txtPinCode"
+            style="@style/common_text_style"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_2sdp"
+            tools:text="400083"
+            android:textStyle="normal"
+            android:ellipsize="end"
+            android:maxLength="12"
+            app:layout_constraintStart_toEndOf="@+id/labelPinCode"
+            app:layout_constraintTop_toBottomOf="@id/labelAttemptNumber" />
+
+
         <View
             android:id="@+id/view"
             android:layout_width="match_parent"
@@ -148,7 +200,7 @@
             android:layout_marginTop="@dimen/_5sdp"
             android:layout_marginEnd="@dimen/_10sdp"
             android:background="@color/textBlue"
-            app:layout_constraintTop_toBottomOf="@id/clStatus" />
+            app:layout_constraintTop_toBottomOf="@id/labelMobileNumber" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
