--- a/app/src/main/res/layout/activity_mpin.xml
+++ b/app/src/main/res/layout/activity_mpin.xml
@@ -120,7 +120,7 @@
         android:visibility="invisible"
         android:id="@+id/txtErrorPIN"
         android:layout_marginBottom="@dimen/_10sdp"
-        android:text="@string/pin_not_matching"
+        android:text="@string/pin_does_not_matching"
         android:textColor="@color/textRed"
         android:textStyle="normal"
         android:textSize="@dimen/_14ssp"
