--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -83,7 +83,7 @@
                     android:layout_marginTop="@dimen/_15sdp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:visibility="invisible"
+                    android:visibility="visible"
                     app:layout_constraintTop_toBottomOf="@id/inputLayoutId">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -103,6 +103,7 @@
                     style="@style/text_input_layout"
                     android:layout_marginTop="@dimen/_15sdp"
                     app:layout_constraintEnd_toEndOf="parent"
+                    android:visibility="invisible"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/inputLayoutId">
 
