Home Icon to got to MainActivity3API added in VisitsForTheDayActivity, CallsForTheDayActivity

--- a/app/src/main/res/layout/activity_visits_for_the_day.xml
+++ b/app/src/main/res/layout/activity_visits_for_the_day.xml
@@ -47,6 +47,18 @@
         app:layout_constraintTop_toTopOf="parent"
         app:tint="@color/white" />
 
+    <ImageView
+        android:id="@+id/ivHome"
+        android:layout_width="@dimen/_22sdp"
+        android:layout_height="@dimen/_22sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
+        android:src="@drawable/home_icon"
+        app:layout_constraintBottom_toBottomOf="@id/toolbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/white" />
+
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvVisitsForTheDay"
