--- a/app/src/main/res/layout/item_loan_collection.xml
+++ b/app/src/main/res/layout/item_loan_collection.xml
@@ -165,6 +165,8 @@
             app:layout_constraintStart_toStartOf="@id/txtDistance"
            app:layout_constraintTop_toTopOf="@id/labelAttemptNumber"
             app:layout_constraintBottom_toBottomOf="@id/labelAttemptNumber"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="@dimen/_5sdp"
             tools:src="@drawable/hand" />
 
         <TextView
@@ -187,8 +189,10 @@
             tools:text="400083"
             android:textStyle="normal"
             android:ellipsize="end"
-            android:maxLength="12"
+            android:maxLength="8"
             app:layout_constraintStart_toEndOf="@+id/labelPinCode"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="@dimen/_5sdp"
             app:layout_constraintTop_toBottomOf="@id/labelAttemptNumber" />
 
 
