LoanCollectionActivity - can search thru pincode in LoanCollection List

--- a/app/src/main/res/layout/item_loan_collection.xml
+++ b/app/src/main/res/layout/item_loan_collection.xml
@@ -16,10 +16,10 @@
             android:layout_marginTop="@dimen/_5sdp"
             android:textStyle="normal"
             android:ellipsize="end"
-            android:maxLength="13"
+            android:maxLength="20"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Sairaj Naidu" />
+            tools:text="Sairaj Naidu Sairaj Naidu" />
 
         <!--For Status-->
         <androidx.constraintlayout.widget.ConstraintLayout
