item_visits_for_the_day.xml alignment fix

--- a/app/src/main/res/layout/item_visits_for_the_day.xml
+++ b/app/src/main/res/layout/item_visits_for_the_day.xml
@@ -133,7 +133,7 @@
             android:layout_marginTop="@dimen/_2sdp"
             android:text="@string/AttemptNo"
             android:textStyle="normal"
-            app:layout_constraintStart_toStartOf="@id/txtLocation"
+            app:layout_constraintStart_toStartOf="@id/labelPinCode"
             app:layout_constraintTop_toBottomOf="@id/txtLocation" />
 
         <TextView
@@ -179,8 +179,8 @@
             android:id="@+id/ivVisitAttempt"
             android:layout_width="@dimen/_15sdp"
             android:layout_height="@dimen/_15sdp"
-            android:layout_marginStart="@dimen/_10sdp"
-            app:layout_constraintStart_toStartOf="@id/txtDistance"
+            android:layout_marginEnd="@dimen/_5sdp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/labelAttemptNumber"
             app:layout_constraintBottom_toBottomOf="@id/labelAttemptNumber"
             tools:src="@drawable/hand" />
@@ -193,7 +193,7 @@
             android:layout_marginTop="@dimen/_2sdp"
             android:text="@string/pincode"
             android:textStyle="normal"
-            app:layout_constraintStart_toStartOf="@id/labelAttemptNumber"
+            app:layout_constraintEnd_toStartOf="@id/txtPinCode"
             app:layout_constraintTop_toBottomOf="@id/labelAttemptNumber" />
 
         <TextView
@@ -205,8 +205,10 @@
             tools:text="400083"
             android:textStyle="normal"
             android:ellipsize="end"
-            android:maxLength="12"
-            app:layout_constraintStart_toEndOf="@+id/labelPinCode"
+            android:maxLength="8"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="@dimen/_10sdp"
             app:layout_constraintTop_toBottomOf="@id/labelAttemptNumber" />
 
 
