--- a/app/src/main/res/layout/item_loan_collection.xml
+++ b/app/src/main/res/layout/item_loan_collection.xml
@@ -115,7 +115,8 @@
             android:layout_marginTop="@dimen/_2sdp"
             android:text="@string/AttemptNo"
             android:textStyle="normal"
-            app:layout_constraintStart_toStartOf="@id/txtLocation"
+            android:layout_marginEnd="@dimen/_5sdp"
+           app:layout_constraintEnd_toStartOf="@id/ivLoanCollectionAttempt"
             app:layout_constraintTop_toBottomOf="@id/txtLocation" />
 
         <TextView
@@ -166,7 +167,7 @@
            app:layout_constraintTop_toTopOf="@id/labelAttemptNumber"
             app:layout_constraintBottom_toBottomOf="@id/labelAttemptNumber"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="@dimen/_5sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
             tools:src="@drawable/hand" />
 
         <TextView
@@ -193,6 +194,7 @@
             app:layout_constraintStart_toEndOf="@+id/labelPinCode"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="@dimen/_5sdp"
+            android:layout_marginStart="@dimen/_2sdp"
             app:layout_constraintTop_toBottomOf="@id/labelAttemptNumber" />
 
 
