--- a/app/src/main/res/layout/activity_main_activity3_api.xml
+++ b/app/src/main/res/layout/activity_main_activity3_api.xml
@@ -225,6 +225,20 @@
 
 -->
 
+                        <!--Progress Bar-->
+                        <ProgressBar
+                            android:id="@+id/loadingProgressBar2"
+                            style="@style/CustomProgressDialog"
+                            android:layout_width="@dimen/_30sdp"
+                            android:layout_height="@dimen/_30sdp"
+                            android:indeterminate="true"
+                            android:visibility="invisible"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/rvScheduleForTheDay"
                             android:layout_width="match_parent"
