constraint changes of Notes Recycler view

--- a/app/src/main/res/layout/custom_dialog_notes_history.xml
+++ b/app/src/main/res/layout/custom_dialog_notes_history.xml
@@ -41,6 +41,8 @@
                 android:orientation="vertical"
                 tools:listitem="@layout/item_notes_history"
                 tools:itemCount="3"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:layout_height="@dimen/_100sdp"/>
 
