--- a/app/src/main/res/layout/item_notes_history.xml
+++ b/app/src/main/res/layout/item_notes_history.xml
@@ -7,17 +7,32 @@
     android:layout_height="wrap_content">
 
 
+
     <TextView
-        android:id="@+id/txtNotesHistory"
+        android:id="@+id/txtNotesHistoryDateTime"
         android:textSize="@dimen/_11ssp"
-        android:layout_marginTop="@dimen/_3sdp"
-        android:layout_marginBottom="@dimen/_3sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:textColor="@color/black"
         app:layout_constraintTop_toTopOf="parent"
+       android:layout_marginTop="@dimen/_2sdp"
+        tools:text="17-06-2023 12:11 AM"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+
+    <TextView
+        android:id="@+id/txtNotesHistory"
+        android:textSize="@dimen/_11ssp"
+        android:layout_marginTop="@dimen/_2sdp"
+        android:layout_marginBottom="@dimen/_2sdp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/black"
+       app:layout_constraintTop_toBottomOf="@id/txtNotesHistoryDateTime"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:text="Friday , 31/3/2023\nCustomer was busy"
+        tools:text="Customer was busy"
+        android:inputType="textMultiLine"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
