--- a/app/src/main/res/layout/item_notes_history.xml
+++ b/app/src/main/res/layout/item_notes_history.xml
@@ -7,14 +7,26 @@
     android:layout_height="wrap_content">
 
 
+    <TextView
+        android:id="@+id/txtNotesHistoryUserName"
+        android:textSize="@dimen/_11ssp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="@dimen/_5sdp"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="@dimen/_2sdp"
+        tools:text="UserName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 
     <TextView
         android:id="@+id/txtNotesHistoryDateTime"
         android:textSize="@dimen/_11ssp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="@dimen/_5sdp"
         android:textColor="@color/black"
-        app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintTop_toBottomOf="@id/txtNotesHistoryUserName"
        android:layout_marginTop="@dimen/_2sdp"
         tools:text="17-06-2023 12:11 AM"
         android:layout_width="wrap_content"
@@ -27,13 +39,13 @@
         android:layout_marginTop="@dimen/_2sdp"
         android:layout_marginBottom="@dimen/_2sdp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="@dimen/_5sdp"
         android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/txtNotesHistoryDateTime"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:text="Customer was busy"
         android:inputType="textMultiLine"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/_250sdp"
         android:layout_height="wrap_content"/>
 
 
