--- a/app/src/main/res/layout/activity_status_of_customer.xml
+++ b/app/src/main/res/layout/activity_status_of_customer.xml
@@ -83,6 +83,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
+    <!--Progress Bar-->
+    <ProgressBar
+        android:id="@+id/loadingProgressBar"
+        style="@style/CustomProgressDialog"
+        android:layout_width="@dimen/_30sdp"
+        android:layout_height="@dimen/_30sdp"
+        android:indeterminate="true"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvStatusOfCustomerDetails"
         app:layout_constraintStart_toStartOf="parent"
