DashBoard- Hiding Total from Schedule For The Day

--- a/app/src/main/res/layout/activity_main_activity3_api.xml
+++ b/app/src/main/res/layout/activity_main_activity3_api.xml
@@ -110,6 +110,7 @@
                             android:layout_marginTop="@dimen/_5sdp"
                             android:layout_marginEnd="@dimen/_15sdp"
                             android:text="@string/total"
+                            android:visibility="invisible"
                             app:layout_constraintEnd_toStartOf="@+id/labelCompletedCallsTotalMonth"
                             app:layout_constraintTop_toTopOf="@id/clCardView" />
 
