--- a/app/src/main/res/layout/item_schedule_for_the_day.xml
+++ b/app/src/main/res/layout/item_schedule_for_the_day.xml
@@ -29,6 +29,7 @@
             android:layout_marginEnd="@dimen/_40sdp"
             android:textColor="@color/black"
             android:textStyle="normal"
+            android:visibility="invisible"
             android:layout_width="@dimen/_30sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="@dimen/_10sdp"
