--- a/app/src/main/res/layout/activity_near_by_customers.xml
+++ b/app/src/main/res/layout/activity_near_by_customers.xml
@@ -25,7 +25,7 @@
         android:id="@+id/clLoanCollectionData"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="invisible"
+        android:visibility="gone"
         android:layout_marginTop="@dimen/_20sdp"
         app:layout_constraintTop_toBottomOf="@id/btnVisitNearbyCustomers"
         android:layout_width="match_parent"
