LoanCollectionActivity - Home icon added that will navigate to Dashboard

--- a/app/src/main/res/layout/activity_loan_collection.xml
+++ b/app/src/main/res/layout/activity_loan_collection.xml
@@ -54,11 +54,11 @@
                 </androidx.appcompat.widget.Toolbar>
 
                 <ImageView
-                    android:id="@+id/ivFilterSort"
+                    android:id="@+id/ivHome"
                     android:layout_width="@dimen/_20sdp"
                     android:layout_height="@dimen/_20sdp"
                     android:layout_marginEnd="@dimen/_10sdp"
-                    android:src="@drawable/filter_sort"
+                    android:src="@drawable/home_icon"
                     app:layout_constraintBottom_toBottomOf="@id/toolbar"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@id/toolbar"
