--- a/app/src/main/res/layout/activity_near_by_customers.xml
+++ b/app/src/main/res/layout/activity_near_by_customers.xml
@@ -15,6 +15,7 @@
         app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_50sdp"
         android:textStyle="normal"
+        android:visibility="invisible"
         style="@style/CustomButtonStyle"
         android:text="@string/view_nearby_customers"
         android:layout_width="wrap_content"
