--- a/app/src/main/res/layout/activity_otpverification.xml
+++ b/app/src/main/res/layout/activity_otpverification.xml
@@ -47,6 +47,7 @@
         android:textColor="@color/black"
         android:textSize="@dimen/_14ssp"
         android:textStyle="bold"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/labelEnter_OTP" />
