--- a/app/src/main/res/layout/item_visits_for_the_day.xml
+++ b/app/src/main/res/layout/item_visits_for_the_day.xml
@@ -169,6 +169,7 @@
             android:layout_height="@dimen/_20sdp"
             android:layout_marginEnd="@dimen/_5sdp"
             android:src="@drawable/location"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/txtDistance"
             app:layout_constraintBottom_toBottomOf="@id/txtDistance"
