--- a/app/src/main/res/layout/item_visits_for_the_day.xml
+++ b/app/src/main/res/layout/item_visits_for_the_day.xml
@@ -158,6 +158,7 @@
             android:layout_marginTop="@dimen/_5sdp"
             android:layout_marginEnd="@dimen/_2sdp"
             android:textStyle="normal"
+            android:visibility="invisible"
             app:layout_constraintEnd_toStartOf="@id/ivMap"
             app:layout_constraintTop_toTopOf="parent"
             android:text="@string/km" />
