--- a/app/src/main/res/layout/activity_customer_details.xml
+++ b/app/src/main/res/layout/activity_customer_details.xml
@@ -233,7 +233,7 @@
                 android:backgroundTint="@color/red"
                 android:text="@string/not_visited_the_customer"
                 android:textStyle="normal"
-                android:visibility="invisible"
+                android:visibility="visible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/btnVisitedTheCustomer" />
