--- a/app/src/main/res/layout/custom_dialog_notes_history.xml
+++ b/app/src/main/res/layout/custom_dialog_notes_history.xml
@@ -32,6 +32,20 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="This is a Custom Dialog Box"/>
 
+            <!--Progress Bar-->
+            <ProgressBar
+                android:id="@+id/loadingProgressBar"
+                style="@style/CustomProgressDialog"
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="@dimen/_30sdp"
+                android:indeterminate="true"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvNotesHistory"
                 app:layout_constraintTop_toBottomOf="@id/txtCustomDialog"
