--- a/app/src/main/res/layout/custom_dialog_image_picker.xml
+++ b/app/src/main/res/layout/custom_dialog_image_picker.xml
@@ -60,14 +60,14 @@
             android:layout_width="@dimen/_136sdp"
             android:layout_height="@dimen/_45sdp"
             android:layout_marginStart="@dimen/_5sdp"
-            android:layout_marginTop="@dimen/_30sdp"
+            android:layout_marginTop="@dimen/_20sdp"
             android:backgroundTint="@color/green"
             android:text="@string/upload_receipt"
             android:textStyle="normal"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+           app:layout_constraintTop_toBottomOf="@+id/txtSkipAndProceed" />
 
         <TextView
             android:id="@+id/txtUploadReceipt"
@@ -136,7 +136,7 @@
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btnUploadReceipt" />
+           app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
