--- a/app/src/main/res/layout/item_details_of_customer.xml
+++ b/app/src/main/res/layout/item_details_of_customer.xml
@@ -11,7 +11,7 @@
         <TextView
             android:id="@+id/labelDetailName"
             style="@style/common_text_style"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/_150sdp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_6sdp"
@@ -22,15 +22,14 @@
 
         <TextView
             android:id="@+id/txtDetailName"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/_100sdp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_5sdp"
             android:ellipsize="end"
-            android:maxLength="20"
             android:textColor="@color/black"
             android:textSize="@dimen/_12ssp"
             android:textStyle="italic"
-            app:layout_constraintBottom_toBottomOf="@id/labelDetailName"
+            android:layout_marginStart="@dimen/_3sdp"
             app:layout_constraintEnd_toStartOf="@id/btnDetail"
             app:layout_constraintTop_toTopOf="@id/labelDetailName"
             tools:text=": Sairaj Naidu" />
