--- a/app/src/main/res/layout/activity_calls_for_the_day.xml
+++ b/app/src/main/res/layout/activity_calls_for_the_day.xml
@@ -59,6 +59,17 @@
         app:tint="@color/white" />
 
 
+    <TextView
+        android:id="@+id/txtNoDataForCalls"
+        android:text="@string/no_data_for_calls"
+        android:visibility="invisible"
+        style="@style/common_text_style"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvCallsForTheDay"
