ivBack arrow style added BackArrowStyle added in approx 38 activities

--- a/app/src/main/res/layout/activity_call_status_with_lead_interaction.xml
+++ b/app/src/main/res/layout/activity_call_status_with_lead_interaction.xml
@@ -11,8 +11,7 @@
 
         <ImageView
             android:id="@+id/ivBack"
-            android:layout_width="@dimen/_20sdp"
-            android:layout_height="@dimen/_20sdp"
+           style="@style/BackArrowStyle"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_10sdp"
             android:src="@drawable/back_arrow"
