--- a/app/src/main/res/layout/activity_dpdactivity.xml
+++ b/app/src/main/res/layout/activity_dpdactivity.xml
@@ -43,14 +43,13 @@
 
         <ImageView
             android:id="@+id/ivBack"
-            app:layout_constraintTop_toTopOf="@id/toolbar"
-            app:layout_constraintBottom_toBottomOf="@id/toolbar"
-            app:layout_constraintStart_toStartOf="parent"
+            style="@style/BackArrowStyle"
             android:layout_marginStart="@dimen/_10sdp"
             android:src="@drawable/back_arrow"
-            android:layout_width="@dimen/_20sdp"
-            android:layout_height="@dimen/_20sdp"
-            app:tint="@color/white" />
+            app:layout_constraintBottom_toBottomOf="@id/toolbar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/clDPD"
