--- a/app/src/main/res/layout/activity_schedule_visit_for_collection.xml
+++ b/app/src/main/res/layout/activity_schedule_visit_for_collection.xml
@@ -42,8 +42,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         android:layout_marginStart="@dimen/_10sdp"
                         android:src="@drawable/back_arrow"
-                        android:layout_width="@dimen/_20sdp"
-                        android:layout_height="@dimen/_20sdp"
+                        style="@style/BackArrowStyle"
                         app:tint="@color/textBlue" />
 
                     <TextView
