--- a/app/src/main/res/layout/activity_visit_npa_notification.xml
+++ b/app/src/main/res/layout/activity_visit_npa_notification.xml
@@ -42,14 +42,13 @@
 
     <ImageView
         android:id="@+id/ivBack"
-        android:layout_width="@dimen/_20sdp"
-        android:layout_height="@dimen/_20sdp"
+        style="@style/BackArrowStyle"
         android:layout_marginStart="@dimen/_10sdp"
         android:src="@drawable/back_arrow"
         app:layout_constraintBottom_toBottomOf="@id/toolbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/white" />
+        />
 
     <ImageView
         android:id="@+id/ivHome"
