--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -19,11 +19,13 @@
 
         <ImageView
             android:id="@+id/ivBack"
-            android:src="@drawable/back_arrow"
+            style="@style/BackArrowStyle"
             android:layout_marginStart="@dimen/_10sdp"
-            android:layout_width="@dimen/_20sdp"
-            android:layout_height="@dimen/_20sdp"
-            app:tint="@color/white" />
+            android:src="@drawable/back_arrow"
+            app:layout_constraintBottom_toBottomOf="@id/toolbar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
         <TextView
             android:textAlignment="center"
