--- a/app/src/main/res/layout/activity_loan_collection.xml
+++ b/app/src/main/res/layout/activity_loan_collection.xml
@@ -241,7 +241,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvLoanCollection"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
@@ -250,6 +250,8 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/clChip"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="@dimen/_5sdp"
                     tools:itemCount="3"
                     tools:listitem="@layout/item_loan_collection" />
 
