activity_details_of_customer2.xml , button Call Initiated added that wil navigate to CallDetailsOfCustomerActivity while call is ON

--- a/app/src/main/res/layout/activity_details_of_customer2.xml
+++ b/app/src/main/res/layout/activity_details_of_customer2.xml
@@ -43,14 +43,13 @@
 
         <ImageView
             android:id="@+id/ivBack"
-            android:layout_width="@dimen/_20sdp"
-            android:layout_height="@dimen/_20sdp"
+            style="@style/BackArrowStyle"
             android:layout_marginStart="@dimen/_10sdp"
             android:src="@drawable/back_arrow"
             app:layout_constraintBottom_toBottomOf="@id/toolbar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/white" />
+            />
 
         <ImageView
             android:id="@+id/ivHome"
@@ -221,6 +220,22 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/ivNotesIcon" />
+
+
+            <Button
+                android:id="@+id/btnCallInitiated"
+                style="@style/CustomButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/_45sdp"
+                android:backgroundTint="@color/green"
+                android:text="@string/call_initiated"
+                android:textStyle="normal"
+                android:visibility="invisible"
+                android:layout_marginTop="@dimen/_20sdp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/ivNotesIcon" />
+
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
