--- a/app/src/main/res/layout/item_status_details_of_customer.xml
+++ b/app/src/main/res/layout/item_status_details_of_customer.xml
@@ -138,6 +138,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
+        <TextView
+            android:id="@+id/txtAmountCollected"
+            tools:text="2000"
+            android:layout_marginStart="@dimen/_5sdp"
+            app:layout_constraintTop_toTopOf="@+id/txtMidStatusInfo3"
+            app:layout_constraintStart_toEndOf="@+id/txtMidStatusInfo3"
+            android:visibility="gone"
+            android:textSize="@dimen/_11ssp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
       <!--  <TextView
             android:id="@+id/txtBottomMainStatusInfo"
             app:layout_constraintTop_toBottomOf="@id/txtMidStatusInfo3"
