--- a/app/src/main/res/layout/activity_schedule_details.xml
+++ b/app/src/main/res/layout/activity_schedule_details.xml
@@ -83,6 +83,19 @@
             android:layout_height="wrap_content"/>
 
 
+        <!--Progress Bar-->
+        <ProgressBar
+            android:id="@+id/loadingProgressBar"
+            style="@style/CustomProgressDialog"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:indeterminate="true"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <!--Whenever there is only recyclerview to display
         always set its fix height OR give paddingBottom to display All Items-->
         <!--Else Give Height = 0dp and Proper constraints-->
