--- a/app/src/main/res/layout/item_visits_for_the_day.xml
+++ b/app/src/main/res/layout/item_visits_for_the_day.xml
@@ -10,13 +10,13 @@
         <TextView
             android:id="@+id/txtName"
             style="@style/common_text_style"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/_130sdp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_5sdp"
             android:textStyle="normal"
             android:ellipsize="end"
-            android:maxLength="20"
+            android:maxLines="1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Sairaj Naidu" />
