--- a/app/src/main/res/layout/custom_dialog_cheque.xml
+++ b/app/src/main/res/layout/custom_dialog_cheque.xml
@@ -49,7 +49,8 @@
             android:layout_marginTop="@dimen/_10sdp"
             android:hint="@string/please_enter_bank_name"
             android:inputType="text"
-            android:maxLength="25"
+            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ."
+            android:maxLength="30"
             android:maxLines="1"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
