--- a/app/src/main/res/layout/item_details_of_customer.xml
+++ b/app/src/main/res/layout/item_details_of_customer.xml
@@ -68,7 +68,7 @@
             android:id="@+id/btnDetail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_3sdp"
+            android:layout_marginEnd="@dimen/_5sdp"
             android:background="@drawable/round_corner_bg"
             android:backgroundTint="@color/textBlue"
             android:gravity="center"
@@ -77,9 +77,30 @@
             android:textColor="@color/white"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@id/labelDetailName"
-            app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintEnd_toStartOf="@id/btnNavigate"
             app:layout_constraintTop_toTopOf="@+id/labelDetailName"
             tools:text="@string/capture" />
+
+        <!--Navigate Button-->
+        <ImageView
+            android:id="@+id/btnNavigate"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="@dimen/_3sdp"
+            app:layout_constraintTop_toTopOf="@id/btnDetail"
+            app:layout_constraintBottom_toBottomOf="@id/btnDetail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/round_corner_bg"
+            android:backgroundTint="@color/green"
+            android:gravity="center"
+            android:src="@drawable/location"
+            android:padding="@dimen/_5sdp"
+            android:text="@string/navigate"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:visibility="gone"
+            app:tint="@color/white" />
+
 
         <!-- Save Button for Amount Paid-->
         <TextView
